--- a/css/styles.css
+++ b/css/styles.css
@@ -193,10 +193,10 @@ h2 {
 	color: #5b9bd5;
 }
 .header {
+	margin: 25px 0;
 	background-color: #e9f4fc;
 	padding: 40px;
 	border-radius: 8px;
-	margin-bottom: 40px;
 	display: flex;
 }
 
@@ -350,6 +350,10 @@ h2 {
 	width: 100%;
 	height: 150px;
 	object-fit: cover;
+}
+.card:hover{
+	transform: scale(1.1);
+	cursor: pointer;
 }
 
 .card-content {
